--- a/detske_01.html
+++ b/detske_01.html
@@ -160,14 +160,13 @@
                     </div>
                     <div class="project-detail-fullscreen-content">
 
-                        <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
+                        <h6 class="project-detail-fullscreen-content-subtitle">Pohádkový dotek</h6>
 
                         <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Pudrové odstíny růžové a bílé, jemná hra světel a dekorativní detaily tvoří prostor, kde se sny stávají skutečností. Designové prvky, jako ikonická židle nebo zdobný lustr, podtrhují kouzelnou atmosféru pokoje. Každý detail je navržen tak, aby mladé slečně poskytl nejen kofort, ale i inspirativní místo pro její každodenní radosti.
+                            </p>
                         </div>
 
                     </div>
