--- a/detske_02.html
+++ b/detske_02.html
@@ -200,12 +200,10 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Dobrodružství mezi dinosaury</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Pokoj, který přináší fantazi k životu. Kombinace zelených odstínů, originální tapety s prehistorickým motivem a světelného nápisu vytváří hravý a inspirativní prostor. Dominantním prvkem je silueta dinosaura - jeho hlava se proměnila v knihovnu a tělo v psací stůl s pohodlným posezením. Tento jedinečný design podporuje kreativitu i učení a zároveñ zanechá dojem na kazdého, kdo do pokoje vstoupí.</p>
                         </div>
 
                     </div>
