--- a/detske_03.html
+++ b/detske_03.html
@@ -162,12 +162,12 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Princeznina říše snů</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Pudrové tóny modré, růžové a bílé tvoří jemné prostředí, kde se malá slečna může cítit jako ve své vlastní
+pohádce. Dekorativni osvětlení, čalounení tón v tónu a detaily, které podtrhují křehkou atmosféru, dělají z
+pokoje místo plné snů a fantazie.</p>
                         </div>
 
                     </div>
