--- a/detske_04.html
+++ b/detske_04.html
@@ -162,12 +162,12 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Kapkový svet fantazie</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Prostor, kde se ručně malované hory stávaji kulisou dětských her a snů. Chytré schody ukrývají
+úložný prostor a vedou až k horní části palandy, kde kapkový motiv chrání i zdobí. Pokojíček plný
+něhy, bezpečí a radosti ze společného objevování.</p>
                         </div>
 
                     </div>
