--- a/detske_05.html
+++ b/detske_05.html
@@ -162,12 +162,10 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Ladnost v jemných tónech</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Pokoj propojuje ženskost, jemnost a praktičnost. Jemné tóny barev, dekorativní stěna s motivem labutí a citlivě zvolené prvky vytváří prostor, kde se dá odpočívat i pracovat.</p>
                         </div>
 
                     </div>
