--- a/detske_06.html
+++ b/detske_06.html
@@ -178,13 +178,16 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Dětské pokojíčky</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Dva světy v jednom pokoji</h2>
 
-                        <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
-                        </div>
+                     <div class="project-detail-fullscreen-content-descr">
+  <p>
+    Tento pokoj je krásnou ukázkou toho, jak lze jeden prostor rozdělit pro dva světy – holčičí a klučičí.
+    Čisté bílé linie a dřevěné akcenty působí nadčasově a dávají pokoji eleganci, která nebude působit dětsky ani v budoucnu. <br>
+    Praktičnost řešení zajišťují oddělené zóny na spaní, které každému poskytují soukromí, a zároveň propojený pracovní kout podporuje společné chvíle.
+    Dívčí jemné motivy a chlapecké vesmírné tóny se setkávají v jednom harmonickém celku, kde má každý svůj vlastní svět — a přesto zůstávají propojení.
+  </p>
+</div>
 
                     </div>
                 </div>
