--- a/interiery_01.html
+++ b/interiery_01.html
@@ -196,12 +196,10 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Nádech renesance</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Dům, kde se noblesa renesance propojuje s moderním komfortem – onyx, zlato a socha Davida vnášejí do prostoru eleganci i nadčasový klid.</p>
                         </div>
 
                     </div>
