--- a/interiery_02.html
+++ b/interiery_02.html
@@ -237,12 +237,10 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Světlo hor v srdci města</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Byt, kde se horská příroda spojuje s moderním městským stylem – umělá skála, zlaté detaily a jemná světelná atmosféra tvoří klidný domov s luxusním dotekem.</p>
                         </div>
 
                     </div>
