--- a/interiery_03.html
+++ b/interiery_03.html
@@ -204,9 +204,7 @@
                         <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Interiér, kde se setkává mužská energie s noblesními prvky – temné tóny, dekorativní listy a ambientní osvětlení vytvářejí osobitý prostor s charakterem.</p>
                         </div>
 
                     </div>
