--- a/interiery_04.html
+++ b/interiery_04.html
@@ -157,12 +157,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Temná elegance</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Byt, kde se moderní barová atmosféra snoubí s noblesou – mramor, dřevo a kov formují sofistikovaný prostor v temných tónech.
+</p>
                         </div>
 
                     </div>
