--- a/interiery_08.html
+++ b/interiery_08.html
@@ -133,12 +133,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Hra světla a struktury</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Koupelna, kde se světlo a materiály prolínají v harmonii. LED linie zvýrazňuje kontrast mramoru a dřeva, zatímco střešní okno dodává celku svěžest a přirozený jas.
+</p>
                         </div>
 
                     </div>
