--- a/komerce_01.html
+++ b/komerce_01.html
@@ -138,12 +138,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Komerční prostory</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Kouzlo elegance</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Prostor, kde se eleganci a čistotě dostává podoby umění. Jemné linie, decentní světlo a výrazné detaily vytvářejí prostředí, které podtrhuje kvalitu a profesionalitu služeb.
+</p>
                         </div>
 
                     </div>
