--- a/komerce_02.html
+++ b/komerce_02.html
@@ -169,9 +169,8 @@
                         <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Prostor, který myslí na muže i děti. Funkční a moderní zázemí doplňují hravé detaily pro malé zákazníky, zatímco čistý design a praktičnost osloví pánskou klientelu.
+</p>
                         </div>
 
                     </div>
