--- a/komerce_03.html
+++ b/komerce_03.html
@@ -136,12 +136,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Komerční prostory</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Černo-zlatý svět, kde vzniká charakter
+</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Místo, kde každý detail podtrhuje sílu a osobitost. Luxusní černo-zlatý prostor pro muže, kteří vědí, co chtějí.</p>
                         </div>
 
                     </div>
