--- a/komerce_04.html
+++ b/komerce_04.html
@@ -184,12 +184,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Komerční prostory</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Smysl detailu
+</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Prostor, kde se jemnost a moderní luxus setkávají v harmonii. Každý detail je navržen tak, aby služby působily nejen profesionálně, ale také poskytovaly klientovi komfort, soukromí a jedinečný zážitek.</p>
                         </div>
 
                     </div>
