--- a/projekty.html
+++ b/projekty.html
@@ -121,9 +121,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_01.html">Luxusní apartmán</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_01.html">Nádech renesance</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Praha 1 </div>
+                                                        Mělník </div>
 
                                                 </div>
                                             </div>
@@ -140,10 +140,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_02.html">European
-                                                            Lard Station</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_02.html">Světlo hor v srdci města</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Strasbourg, France </div>
+                                                        Praha </div>
 
                                                 </div>
                                             </div>
@@ -160,10 +159,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_03.html">Cultural
-                                                            Complex Centre</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_03.html">Pánský styl s detaily</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Muscat, Sultanate of Oman </div>
+                                                        Třeboradice </div>
 
                                                 </div>
                                             </div>
@@ -180,10 +178,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_04.html">Alvar
-                                                            Alto Museum</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_04.html">Temná elegance</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Casablanca, Morocco </div>
+                                                        Přerov </div>
 
                                                 </div>
                                             </div>
@@ -200,10 +197,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_05.html">Dance
-                                                            and Music Theatre</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_05.html">Bílá harmonie domova</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Perth, Australia </div>
+                                                       Litoměřice </div>
 
                                                 </div>
                                             </div>
@@ -220,10 +216,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_06.html">French
-                                                            Embassy</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_06.html">Zlatý dotek mramoru</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Casablanca, Morocco </div>
+                                                        Poděbrady </div>
 
                                                 </div>
                                             </div>
@@ -240,10 +235,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_07.html">Hower
-                                                            Cafe</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_07.html">Síla malého prostoru</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Guangzhou, China </div>
+                                                        Praha </div>
 
                                                 </div>
                                             </div>
@@ -260,10 +254,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="interiery_08.html">Evo
-                                                            Grand Hall</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_08.html">Hra světla a struktury</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Prague, Czech Republic </div>
+                                                        Praha </div>
 
                                                 </div>
                                             </div>
@@ -316,10 +309,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_01.html">Yabroudi
-                                                            Villa</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="detske_01.html">Pohádkový dotek</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Dubai, United Arab Emirates </div>
+                                                        Praha </div>
 
                                                 </div>
                                             </div>
@@ -336,10 +328,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_02.html">Amman
-                                                            Rotana Hotel</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="detske_02.html">Dobrodružství mezi dinosaury</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Amman, Jordan </div>
+                                                        Pardubice </div>
 
                                                 </div>
                                             </div>
@@ -356,10 +347,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_03.html">Handebr
-                                                            the Villa</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="detske_03.html">Princeznina říše snů</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Rotterdam, Netherlands </div>
+                                                        Brno </div>
 
                                                 </div>
                                             </div>
@@ -376,10 +366,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_04.html">Velinston
-                                                            Apartments</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="detske_04.html">Kapkový svět fantazie</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Foshan, China </div>
+                                                        Praha </div>
 
                                                 </div>
                                             </div>
@@ -396,10 +385,8 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_05.html">Luxurious
-                                                            apartment</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Kuwait City, Kuwait </div>
+                                                    <h4 class="project-grid-item-title"><a href="detske_05.html">Ladnost v jemných tónech</a></h4>
+                                                    <div class="project-grid-item-category">Praha </div>
 
                                                 </div>
                                             </div>
@@ -418,10 +405,9 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_06.html">Alto
-                                                            Furniture</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="detske_06.html">Dva světy v jednom pokoji</a></h4>
                                                     <div class="project-grid-item-category">
-                                                        Minsk, Belarus </div>
+                                                        Litoměřice </div>
 
                                                 </div>
                                             </div>
@@ -473,10 +459,8 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="komerce_01.html">European
-                                                            Lard Station</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Strasbourg, France </div>
+                                                    <h4 class="project-grid-item-title"><a href="komerce_01.html">Kouzlo elegance</a></h4>
+                                                    <div class="project-grid-item-category">Mělník</div>
 
                                                 </div>
                                             </div>
@@ -493,10 +477,8 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="komerce_02.html">Yabroudi
-                                                            Villa</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Dubai, United Arab Emirates </div>
+                                                    <h4 class="project-grid-item-title"><a href="komerce_02.html">Kadeřnictví pro muže a malé gentlemany</a></h4>
+                                                    <div class="project-grid-item-category">Zlín - OC Čepkov</div>
 
                                                 </div>
                                             </div>
@@ -513,10 +495,8 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="komerce_03.html">Cultural
-                                                            Complex Centre</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Muscat, Sultanate of Oman </div>
+                                                    <h4 class="project-grid-item-title"><a href="komerce_03.html">Černo-zlatý svět, kde vzniká charakter</a></h4>
+                                                    <div class="project-grid-item-category">Praha - Bílá labuť</div>
 
                                                 </div>
                                             </div>
@@ -533,10 +513,8 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="komerce_04.html">Dalbourne
-                                                            Villa</a></h4>
-                                                    <div class="project-grid-item-category">
-                                                        Guangzhou, China </div>
+                                                    <h4 class="project-grid-item-title"><a href="komerce_04.html">Smysl detailu</a></h4>
+                                                    <div class="project-grid-item-category">Praha - Braník</div>
 
                                                 </div>
                                             </div>
