--- a/interiery_05.html
+++ b/interiery_05.html
@@ -147,12 +147,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Bílá harmonie domova</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Bílá jako symbol čistoty a světla prostupuje celý interiér, doplněná teplým tónem dřeva a jemnou kresbou mramoru. Prostor působí vzdušně, sjednoceně a přináší pocit klidu i útulného zázemí pro celou rodinu.
+</p>
                         </div>
 
                     </div>
