--- a/interiery_06.html
+++ b/interiery_06.html
@@ -139,12 +139,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Zlatý dotek mramoru</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Bílý a černý mramor doplněný zlatými detaily a jemným světlem vytváří elegantní a harmonickou koupelnu.
+</p>
                         </div>
 
                     </div>
