--- a/interiery_07.html
+++ b/interiery_07.html
@@ -139,12 +139,11 @@
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
 
-                        <h2 class="project-detail-fullscreen-content-title">Luxusní apartmán v srdci Prahy</h2>
+                        <h2 class="project-detail-fullscreen-content-title">Síla malého prostoru</h2>
 
                         <div class="project-detail-fullscreen-content-descr">
-                            <p>The project required creating 4 different rooms environments in various styles
-                                following the given specification. In general there was a lot of creative
-                                freedom in interpreting the given themes.</p>
+                            <p>Kompaktní byt navržený s důrazem na funkčnost i styl. Spojení moderního designu, útulného zázemí pro odpočinek a světlých tónů, které interiér otevírají a činí příjemným pro život.
+</p>
                         </div>
 
                     </div>
